--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.scrollbar-hide::-webkit-scrollbar {
+    height: 6px;
+    background-color: transparent;
+  }
+  
+  .scrollbar-hide::-webkit-scrollbar-thumb {
+    background-color: #374151; /* gray-700 */
+    border-radius: 3px;
+    opacity: 0.3;
+  }
+  
+  .scrollbar-show::-webkit-scrollbar {
+    height: 6px;
+    background-color: transparent;
+  }
+  
+  .scrollbar-show::-webkit-scrollbar-thumb {
+    background-color: #4b5563; /* gray-600 */
+    border-radius: 3px;
+    opacity: 0.7;
+    transition: all 0.3s ease;
+  }
+  
+  .scrollbar-show::-webkit-scrollbar-thumb:hover {
+    background-color: #6b7280; /* gray-500 */
+    opacity: 1;
+  }
