--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -3,30 +3,25 @@
 @tailwind utilities;
 
 
-.scrollbar-hide::-webkit-scrollbar {
-    height: 6px;
+
+.custom-scrollbar::-webkit-scrollbar {
+    height: 2px; 
+    width: 4px;
     background-color: transparent;
   }
   
-  .scrollbar-hide::-webkit-scrollbar-thumb {
-    background-color: #374151; /* gray-700 */
-    border-radius: 3px;
-    opacity: 0.3;
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #4b5563;
+    border-radius: 2px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
   }
   
-  .scrollbar-show::-webkit-scrollbar {
-    height: 6px;
-    background-color: transparent;
+  .custom-scrollbar:hover::-webkit-scrollbar-thumb {
+    opacity: 0.5;
   }
   
-  .scrollbar-show::-webkit-scrollbar-thumb {
-    background-color: #4b5563; /* gray-600 */
-    border-radius: 3px;
-    opacity: 0.7;
-    transition: all 0.3s ease;
-  }
-  
-  .scrollbar-show::-webkit-scrollbar-thumb:hover {
-    background-color: #6b7280; /* gray-500 */
-    opacity: 1;
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #6b7280;
+    opacity: 0.8;
   }
